feat(landing-page): synchronize all pages with Bridgit Social v2 release
- index.html:
    - Updated "How It Works" workflow to 4 steps: Set Intentions, Craft Pitch, Discover Nearby, Bridge the Gap.
    - Added sections for AI Pitch Assistant, Interactive Community Feed, and Bridges.
    - Refreshed screenshot gallery with latest iPhone visuals.
    - Scoped gallery classes to resolve styling conflicts.

- instructions.html:
    - Realigned detailed guide with the new 4-step workflow and features.
    - Added AI assistant and feed sections.
    - Standardized image containers with a 4:5 aspect ratio and object-fit for visual consistency.
    - Integrated clickable lightboxes (poptrox) for all instructional screens.

- waitListPage.html:
    - Updated copy to align with "Bridgit Exclusive Club" branding.

- blog/:
    - blog/index.html & blog/posts/bridgit-social-new-update.html:
        - Refined title to "Bridgit Social v2: The Human-First Networking Revolution".
        - Updated summaries to highlight NEW AI Pitch Assistant and Community Feed features.
        - Synchronized content with updated nomenclature.

- assets/css/main.css:
    - Implemented standardized aspect ratios (4/5) and object-fit (cover) for screenshot galleries.
    - Scoped gallery styles to prevent conflicts with blog card layouts.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<header>
 					<h2>Connect with Real People,<br />In Real Time, In Real Places</h2>
 				</header>
-				<p>Bridgit Social helps you discover and connect with people around you—whether you're at a café, coworking space, or just nearby. Start meaningful conversations that lead to real connections.</p>
+				<p>Bridgit Social is a place to bridge the gap and meet now. Discover and connect with real people around you—whether you're seeking professional opportunities or social connections. Start meaningful conversations that lead to real-world meetings.</p>
 				<ul class="actions special">
 					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i> Download on App Store</a></li>
 				</ul>
@@ -115,14 +115,12 @@
 				<header>
 					<h2>How It Works</h2>
 				</header>
-				<p>Simple, intuitive, and designed for real-world connections. Create your profile, choose your networking mode, and discover people around you who are ready to connect.</p>
+				<p>Built for authentic real-world connections. Set your intentions, craft the perfect pitch, and find your next big connection nearby.</p>
 				<ul>
-					<li>Real-time, location-based discovery</li>
-					<li>Anonymous browsing until you match</li>
-					<li>"Mark to Meet" for mutual interest</li> 
-					<li>Privacy-protected map view</li>
-					<li>Private notes after connections</li>
-					<li>Two modes: Same Place or Walking Distance</li>
+					<li><strong>1. Set Your Intentions:</strong> Tell the community exactly what you’re looking for today.</li>
+					<li><strong>2. Craft Your Pitch:</strong> Use our AI-assistant to generate the perfect introduction.</li>
+					<li><strong>3. Discover Nearby:</strong> Check the interactive map or real-time feed for active users.</li> 
+					<li><strong>4. Bridge the Gap:</strong> Match, chat instantly, and meet up in person.</li>
 				</ul>
 			</div>
 		</section>
@@ -135,10 +133,11 @@
 				</header>
 				<p>Your privacy and safety are our top priorities. Bridgit uses advanced privacy protection to keep you safe while connecting. Your real location is never shared—only approximate coordinates in Walking Distance mode.</p>
 				<ul>
-					<li>Actual GPS coordinates never shared</li>
-					<li>Fuzzy location pins for privacy</li>
+					<li>Anonymous browsing until you match</li>
+					<li>Fuzzy location pins for Walking Distance privacy</li>
+					<li>Built-in AI moderation and reporting systems</li>
 					<li>Hide, report, or block users anytime</li>
-					<li>Meeting confirmation & archiving tools</li>
+					<li>Granular privacy controls: You decide when you're visible</li>
 				</ul>
       </div>
     </section>
@@ -153,50 +152,53 @@
 				<ul class="actions special">
 					<li><a href="https://apps.apple.com/us/app/bridgit-social/id6743941115" target="_blank" class="button"><i class="fab fa-apple" style="margin-right: 8px;"></i> Download on App Store</a></li>
 				</ul>
-        <div class="gallery">
+        <div class="gallery screenshots">
           <article class="from-left">
-            <a href="images/fulls/01.png" class="image fit"
+            <a href="images/blogs/4_Update_v2/1_iPhone_v2.jpg" class="image fit"
               ><img
-                src="images/screenshots/01.png"
-                title="Create Profile"
-                alt="Create Profile"
+                src="images/blogs/4_Update_v2/1_iPhone_v2.jpg"
+                title="Onboarding Flow"
+                alt="Onboarding Flow"
             /></a>
           </article>
           <article class="from-right">
-            <a href="images/fulls/02.jpg" class="image fit"
+            <a href="images/blogs/4_Update_v2/2_iPhone_v2.jpg" class="image fit"
               ><img
-                src="images/screenshots/02.png"
-                title="Discover New People"
-                alt="Discover New People"
+                src="images/blogs/4_Update_v2/2_iPhone_v2.jpg"
+                title="Smart Matching"
+                alt="Smart Matching"
             /></a>
           </article>
           <article class="from-left">
-            <a href="images/fulls/03.jpg" class="image fit"
+            <a href="images/blogs/4_Update_v2/1_iPhone_AI_Pitch.jpg" class="image fit"
               ><img
-                src="images/screenshots/03.png"
-                title="Mark to Meet"
-                alt="Mark to Meet"
+                src="images/blogs/4_Update_v2/1_iPhone_AI_Pitch.jpg"
+                title="AI Pitch Assistant"
+                alt="AI Pitch Assistant"
             /></a>
           </article>
           <article class="from-right">
-            <a href="images/fulls/04.jpg" class="image fit"
+            <a href="images/blogs/4_Update_v2/9_iPhone_v2.jpg" class="image fit"
               ><img
-                src="images/screenshots/04.png"
-                title="Matched List"
-                alt="Matches"
+                src="images/blogs/4_Update_v2/9_iPhone_v2.jpg"
+                title="Community Feed"
+                alt="Community Feed"
             /></a>
           </article>
           <article class="from-left">
-            <a href="images/fulls/05.jpg" class="image fit"
-              ><img src="images/screenshots/05.png" title="View Map" alt="View Map"
+            <a href="images/blogs/4_Update_v2/1_iPhone_Discovery.jpg" class="image fit"
+              ><img
+                src="images/blogs/4_Update_v2/1_iPhone_Discovery.jpg"
+                title="Map Discovery"
+                alt="Map Discovery"
             /></a>
           </article>
           <article class="from-right">
-            <a href="images/fulls/06.jpg" class="image fit"
+            <a href="images/blogs/4_Update_v2/10_iPhone_v2.jpg" class="image fit"
               ><img
-                src="images/screenshots/06.png"
-                title="Manage Connections"
-                alt="Manage Connections"
+                src="images/blogs/4_Update_v2/10_iPhone_v2.jpg"
+                title="My Growth Dashboard"
+                alt="My Growth Dashboard"
             /></a>
           </article>
         </div>
