--- a/waitListPage.html
+++ b/waitListPage.html
@@ -177,8 +177,8 @@
         <p class="headline">Join the Bridgit Exclusive Club</p>
         <p class="call-to-action">Partner with us, organize events, or become a venue partner.</p>
         <p class="subtext">
-            We offer partnership opportunities for event organizers, venue owners, and individuals who want to be part of the Bridgit Exclusive Club.
-            Connect with us to use your venue for networking events or to help spread the word.
+            Experience the future of real-time networking. Join the **Bridgit Exclusive Club** to access premium features, partner venues, and curated networking "Bridges".
+            Whether you're an event organizer, venue owner, or a professional looking to bridge the gap, we'd love to have you.
         </p>
         <form class="waitlist-form" id="waitlistForm">
             <input type="text" id="name" placeholder="Enter your name (optional)">
