--- a/instructions.html
+++ b/instructions.html
@@ -51,29 +51,29 @@
       <div class="box" style="margin-bottom: 3rem;">
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
           <div>
-            <h3 style="color: var(--color-accent); font-size: 2rem; margin-bottom: 1rem;">01. Create Your Profile</h3>
-            <p style="font-size: 1.1rem; line-height: 1.8;">Get started with Bridgit Social in just a few steps:</p>
+            <h3 style="color: var(--color-accent); font-size: 2rem; margin-bottom: 1rem;">01. Set Your Intentions</h3>
+            <p style="font-size: 1.1rem; line-height: 1.8;">Get started by telling the community what you're looking for today:</p>
             <ul style="list-style: none; padding: 0; margin-top: 1.5rem;">
               <li style="padding: 0.75rem 0; border-bottom: 1px solid rgba(255,255,255,0.1); display: flex; align-items: center; gap: 1rem;">
                 <span style="color: var(--color-accent); font-size: 1.5rem;">→</span>
-                <span>Sign up or log in with your preferred method</span>
+                <span>Select from professional or social intentions</span>
               </li>
               <li style="padding: 0.75rem 0; border-bottom: 1px solid rgba(255,255,255,0.1); display: flex; align-items: center; gap: 1rem;">
                 <span style="color: var(--color-accent); font-size: 1.5rem;">→</span>
-                <span>Upload a clear profile photo</span>
+                <span>Update your status in real-time as your goals change</span>
               </li>
               <li style="padding: 0.75rem 0; border-bottom: 1px solid rgba(255,255,255,0.1); display: flex; align-items: center; gap: 1rem;">
                 <span style="color: var(--color-accent); font-size: 1.5rem;">→</span>
-                <span>Fill in your interests and networking goals</span>
-              </li>
-              <li style="padding: 0.75rem 0; display: flex; align-items: center; gap: 1rem;">
-                <span style="color: var(--color-accent); font-size: 1.5rem;">→</span>
-                <span>Customize your profile preferences</span>
+                <span>Your intentions help our algorithm find the best matches</span>
               </li>
             </ul>
           </div>
           <div>
-            <img src="images/screenshots/01.png" alt="Create Profile" style="width: 100%; max-width: 350px; margin: 0 auto; display: block; border-radius: 1rem; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+            <div class="step-image-container gallery">
+              <a href="images/blogs/4_Update_v2/1_iPhone_v2.jpg" class="image">
+                <img src="images/blogs/4_Update_v2/1_iPhone_v2.jpg" alt="Set Intentions">
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -82,18 +82,21 @@
       <div class="box" style="margin-bottom: 3rem;">
         <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 3rem; align-items: center;">
           <div style="order: 2;">
-            <h3 style="color: var(--color-accent); font-size: 2rem; margin-bottom: 1rem;">02. Choose Your Mode</h3>
-            <div style="margin-bottom: 2rem;">
-              <h4 style="color: var(--color-accent-light); font-size: 1.3rem; margin-bottom: 0.5rem;">🟢 Same Place Mode</h4>
-              <p style="line-height: 1.8;">Perfect when you're at a café, coworking space, or conference. See only people within 100 meters of your location.</p>
-            </div>
-            <div>
-              <h4 style="color: var(--color-accent-light); font-size: 1.3rem; margin-bottom: 0.5rem;">🚶 Walking Distance Mode</h4>
-              <p style="line-height: 1.8;">Discover people nearby within a 10-minute walk. Your exact location stays private with approximate pins shown on the map.</p>
+            <h3 style="color: var(--color-accent); font-size: 2rem; margin-bottom: 1rem;">02. Craft Your Pitch</h3>
+            <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">Let our AI-assistant help you make a great first impression:</p>
+            <div style="background: rgba(99, 102, 241, 0.1); border-left: 4px solid var(--color-primary); padding: 1.5rem; border-radius: 0.5rem; line-height: 2;">
+              ✓ Generate personalized intros based on your profile<br>
+              ✓ Tailor your pitch for different networking contexts<br>
+              ✓ Save high-impact versions for social or professional use<br>
+              ✓ Stand out with a clear, concise professional summary
             </div>
           </div>
           <div style="order: 1;">
-            <img src="images/screenshots/02.png" alt="Mode Selection" style="width: 100%; max-width: 350px; margin: 0 auto; display: block; border-radius: 1rem; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+            <div class="step-image-container gallery">
+              <a href="images/blogs/4_Update_v2/1_iPhone_AI_Pitch.jpg" class="image">
+                <img src="images/blogs/4_Update_v2/1_iPhone_AI_Pitch.jpg" alt="AI Pitch Assistant">
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -105,15 +108,19 @@
             <h3 style="color: var(--color-accent); font-size: 2rem; margin-bottom: 1rem;">03. Explore & Connect</h3>
             <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">Discover people around you and start meaningful connections:</p>
             <div style="background: rgba(6, 182, 212, 0.1); border-left: 4px solid var(--color-accent); padding: 1.5rem; border-radius: 0.5rem; line-height: 2;">
-              ✓ View users on the interactive map<br>
-              ✓ Browse profiles anonymously<br>
-              ✓ Hide profiles that don't interest you<br>
-              ✓ Mark to Meet with a personalized note<br>
-              ✓ Match when interest is mutual
+              ✓ Discover users on the interactive real-time map<br>
+              ✓ Explore the Community Feed for active local pitches<br>
+              ✓ Browse detailed professional profiles anonymously<br>
+              ✓ Use Smart Matching to find high-alignment goals<br>
+              ✓ Mark to Meet when you find a potential connection
             </div>
           </div>
           <div>
-            <img src="images/screenshots/03.png" alt="Explore & Connect" style="width: 100%; max-width: 350px; margin: 0 auto; display: block; border-radius: 1rem; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+            <div class="step-image-container gallery">
+              <a href="images/blogs/4_Update_v2/1_iPhone_Discovery.jpg" class="image">
+                <img src="images/blogs/4_Update_v2/1_iPhone_Discovery.jpg" alt="Explore & Connect">
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -126,21 +133,25 @@
             <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">Take your connection from digital to real:</p>
             <ul style="list-style: none; padding: 0;">
               <li style="padding: 0.75rem; margin-bottom: 0.75rem; background: rgba(99, 102, 241, 0.05); border-radius: 0.5rem; border-left: 3px solid var(--color-primary);">
-                Tap "Ready to Meet" when available
+                Match with users sharing mutual interest
               </li>
               <li style="padding: 0.75rem; margin-bottom: 0.75rem; background: rgba(99, 102, 241, 0.05); border-radius: 0.5rem; border-left: 3px solid var(--color-primary);">
-                Coordinate meeting details with your match
+                Chat instantly to coordinate your meeting
               </li>
               <li style="padding: 0.75rem; margin-bottom: 0.75rem; background: rgba(99, 102, 241, 0.05); border-radius: 0.5rem; border-left: 3px solid var(--color-primary);">
-                Confirm with "Meeting Happened"
+                Meet at partner venues, local Bridges, or anywhere you choose
               </li>
               <li style="padding: 0.75rem; background: rgba(99, 102, 241, 0.05); border-radius: 0.5rem; border-left: 3px solid var(--color-primary);">
-                Keep private notes for future reference
+                Confirm the meeting and track your networking growth
               </li>
             </ul>
           </div>
           <div style="order: 1;">
-            <img src="images/screenshots/04.png" alt="Meet In-Person" style="width: 100%; max-width: 350px; margin: 0 auto; display: block; border-radius: 1rem; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+            <div class="step-image-container gallery">
+              <a href="images/blogs/4_Update_v2/1_iPhone_Instant_chat.jpg" class="image">
+                <img src="images/blogs/4_Update_v2/1_iPhone_Instant_chat.jpg" alt="Meet In-Person">
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -162,14 +173,14 @@
               <span style="color: var(--color-text-light);">View profiles privately until you match</span>
             </div>
             <div>
-              <div style="font-size: 2rem; margin-bottom: 0.5rem;">⚡</div>
-              <strong style="display: block; margin-bottom: 0.5rem;">Quick Actions</strong>
-              <span style="color: var(--color-text-light);">Hide, report, or block users instantly</span>
+              <div style="font-size: 2rem; margin-bottom: 0.5rem;">🤖</div>
+              <strong style="display: block; margin-bottom: 0.5rem;">AI Moderation</strong>
+              <span style="color: var(--color-text-light);">Real-time monitoring for a safe environment</span>
             </div>
             <div>
               <div style="font-size: 2rem; margin-bottom: 0.5rem;">✓</div>
-              <strong style="display: block; margin-bottom: 0.5rem;">Meeting Confirmation</strong>
-              <span style="color: var(--color-text-light);">Track and archive your connections</span>
+              <strong style="display: block; margin-bottom: 0.5rem;">Privacy Controls</strong>
+              <span style="color: var(--color-text-light);">You decide when you're visible and to whom</span>
             </div>
           </div>
         </div>
@@ -222,6 +233,7 @@
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/jquery.poptrox.min.js"></script>
   <script src="assets/js/browser.min.js"></script>
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
@@ -270,6 +282,25 @@
       h3 {
         font-size: 1.5rem !important;
       }
+    }
+
+    /* Standardized image containers for steps */
+    .step-image-container {
+      width: 100%;
+      max-width: 350px;
+      margin: 0 auto;
+      aspect-ratio: 4 / 5;
+      overflow: hidden;
+      border-radius: 1rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      background: var(--color-dark-alt);
+    }
+    .step-image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: top;
+      display: block;
     }
   </style>
 </body>
